Add Util method to fetch inputs from parameters, content, and previous step output (#234)
* Util method to get required inputs

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Implement parsing in some of the steps

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Handle parsing exceptions in the future

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Improve exception handling

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* More steps using the new input parsing

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Update Delete Connector Step with parsing util

Signed-off-by: Daniel Widdis <widdis@gmail.com>

---------

Signed-off-by: Daniel Widdis <widdis@gmail.com>